# TARDIS

./: .buildinfo  .flake8  .gitignore  .licenserc.json  .pre-commit-config.yaml  .pre-commit-hoos.ymal  Dockerfile  HISTORY.html  LICENSE  MANIFEST.in  README.html  README.md  README.rst  citation.html  code_doc.html  genindex.html  index.html  instructions.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py  test.py  tutorials.html
.doctrees/: HISTORY.doctree  README.doctree  citation.doctree  code_doc.doctree  environment.pickle  index.doctree  instructions.doctree  tutorials.doctree
.doctrees/analysis/: analysis.doctree  filament_utils.doctree  mt_classification.doctree
.doctrees/cnn/: cnn.doctree  data_processing.doctree  datasets.doctree  model.doctree  utils.doctree
.doctrees/dist_pytorch/: data_loader.doctree  dist.doctree  modules.doctree  utils.doctree
.doctrees/usage/: 2d_membrane.doctree  2d_mt.doctree  3d_actin.doctree  3d_membrane.doctree  3d_mt.doctree  fine_tune_model.doctree  helper.doctree  scripting.doctree  tirf_mt.doctree  troubleshooting.doctree  visualization.doctree
.doctrees/utils/: aws.doctree  helper.doctree  import_data.doctree  logger.doctree  predictor.doctree  setup.doctree  spline.doctree  trainer.doctree  utils.doctree  visualize.doctree
.github/workflows/: licensed.yml  opencommit.yml  publish_conda.yml  publish_pypi.yml  python-package.yml  python_package.yml  python_pytest.yml  s3_ota_update.yml  sphinx_documentation.yml
.run/: Sphinx - build.run.xml  pytest - Python 3.10.run.xml  pytest - Python 3.11.run.xml  pytest - Python 3.9.run.xml  pytest - python 3.8.run.xml
GF_checkpoint/: training_losses.csv
_sources/: HISTORY.md.txt  code_doc.rst.txt  index.rst.txt  instructions.rst.txt  tutorials.rst.txt
_sources/analysis/: filament_utils.rst.txt  mt_classification.rst.txt
_sources/cnn/: data_processing.rst.txt  model.rst.txt  utils.rst.txt
_sources/dist_pytorch/: data_loader.rst.txt  dist.rst.txt  utils.rst.txt
_sources/usage/: 2d_membrane.rst.txt  3d_actin.rst.txt  3d_mt.rst.txt  fine_tune_model.rst.txt  helper.rst.txt  scripting.rst.txt  tirf_mt.rst.txt  troubleshooting.rst.txt  visualization.rst.txt
_sources/utils/: helper.rst.txt  logger.rst.txt  predictor.rst.txt  setup.rst.txt  visualize.rst.txt
analysis/: analysis.html  filament_utils.html  mt_classification.html
benchmarks/: nature_tardis_pycurve.ipynb  tardis_pycurve.ipynb
cnn/: cnn.html  data_processing.html  datasets.html  model.html  utils.html
conda-build/: conda_build_config.yml  conda_publish_env.yaml  meta-v0.2.1.yaml  meta-v0.2.2.yaml  meta-v0.2.3.yaml  meta-v0.2.4.yaml  meta-v0.2.6.yaml  meta-v0.2.8.yaml  meta-v0.2.9.yaml  meta-v0.3.0.yaml  meta-v0.3.5.yaml  meta.yaml
dist_pytorch/: data_loader.html  dist.html  modules.html  utils.html
doc/: Makefile
doc/source/: HISTORY.md  HISTORY.rst  conf.py  index.md
docs/: HISTORY.md  HISTORY.rst  Makefile  citation.rst  code.md  conf.py  index.md  index.rst  instructions.rst  tutorial.md  tutorials.rst
docs/analysis/: analysis.rst  filament_utils.rst  mt_classification.rst
docs/cnn/: cnn.rst  data_processing.rst  datasets.rst
docs/dist_pytorch/: modules.rst
docs/models/: unet.dio  unet3+.dio
docs/source/: HISTORY.md  HISTORY.rst  README.md  README.rst  conf.py  index.md  index.rst
docs/usage/: 2d_membrane.rst  2d_mt.rst  3d_actin.rst  3d_membrane.rst  3d_mt.rst  fine_tune_model.rst  helper.rst  scripting.rst  tirf_mt.rst  troubleshooting.rst  visualization.rst
docs/utils/: aws.rst  import_data.md  import_data.rst  spline.rst  trainer.md  trainer.rst  utils.rst
resources/models/: graph.dio  (+2 more)
tardis/: DIST_score.py  _version.py  cnn_postprocess.py  compare_spatial_graphs.py  graphformer_score.py  image_segmentation.py  predict_MTs.py  predict_cro_mt.py  predict_image_segmentation.py  predict_mem.py  predict_mt.py  predict_spindletorch.py  spindletorch_postprocess.py  train.py  train_DIST.py  train_image_segmentation.py  train_pointcloud_segmentation.py  train_spindletorch.py  trainign_image_segmentation.py  version.py
tardis_dev/: predict_MTs.py  predict_mt.py  predict_spindletorch.py  train_DIST.py  train_spindletorch.py  version.py
tardis_em/: __init__.py  _version.py  compare_spatial_graphs.py  predict.py  predict_actin.py  predict_cro_mt.py  predict_filament.py  predict_instances.py  predict_mem.py  predict_mem_2d.py  predict_mt.py  tardis.py  train_DIST.py  train_cnn.py  train_spindletorch.py
tardis_pytorch/: __init__.py  _version.py  compare_spatial_graphs.py  predict_cro_mt.py  predict_filament.py  predict_instances.py  predict_mem.py  predict_mem_2d.py  predict_mt.py  tardis.py  train_DIST.py  train_spindletorch.py
tests/: run_all_tests.py  test_analysis.py  test_analysis_utils.py  test_building_dataset.py  test_click.py  test_click_main.py  test_cnn_build_dataset.py  test_cnn_dataset.py  test_cnn_draw_mask.py  test_cnn_interpolation.py  test_cnn_nn.py  test_cnn_trainer.py  test_cnn_trim_stitch.py  test_cnn_utils.py  test_data_loader.py  test_dist_augmentation.py  test_dist_data_loader.py  test_dist_embedding.py  test_dist_graph_cut.py  test_dist_img_to_pc.py  test_dist_modules.py  test_dist_nn.py  test_dist_train.py  test_dist_trainer.py  test_dist_utils.py  test_filament_utils.py  test_general_losses.py  test_general_trainer.py  test_general_utils.py  test_label.py  test_losses.py  test_main.py  test_nn.py  test_pointcloud_build.py  test_pointcloud_builder.py  test_sis_data_loader.py  test_sis_nn.py  test_slcpy_data_loader.py  test_slcpy_label.py  test_slcpy_pointcloud_builder.py  (+16 more)
usage/: 2d_membrane.html  2d_mt.html  3d_actin.html  3d_membrane.html  3d_mt.html  fine_tune_model.html  helper.html  scripting.html  tirf_mt.html  troubleshooting.html  visualization.html
utils/: aws.html  helper.html  import_data.html  logger.html  predictor.html  setup.html  spline.html  trainer.html  utils.html  visualize.html
workflows/: czi_predict.py  visualize.py
(+407 files in other folders)
