#######################################################################
#  TARDIS - Transformer And Rapid Dimensionless Instance Segmentation #
#                                                                     #
#  New York Structural Biology Center                                 #
#  Simons Machine Learning Center                                     #
#                                                                     #
#  Robert Kiewisz, Tristan Bepler                                     #
#  MIT License 2021 - 2025                                            #
#######################################################################

[build-system]
requires = ["setuptools>42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 100
lines_between_types = 1
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]