#######################################################################
#  TARDIS - Transformer And Rapid Dimensionless Instance Segmentation #
#                                                                     #
#  New York Structural Biology Center                                 #
#  Simons Machine Learning Center                                     #
#                                                                     #
#  Robert Kiewisz, Tristan Bepler                                     #
#  MIT License 2021 - 2023                                            #
#######################################################################
[metadata]
name = tardis_em
description = PyTorch segmentation of 2D/3D images such as electron tomography (ET),Cryo-EM or fluorescent microscopy data into 3D segmented point cloud.
long_description = file: README.md, doc/source/HISTORY.md, LICENSE
long_description_content_type = text/markdown
keywords = semantic segmentation, instance segmentation, MT segmentation, membrane segmentation, CNN, FNet, DIST
url = https://github.com/SMLC-NYSBC/TARDIS
author = Robert Kiewisz, Tristan Bepler
author_email = rkiewisz@nysbc.org
license = MIT
license_files = LICENSE
version = attr:tardis_em.__version__
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers/Research
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: >=11.3
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]

docs =
  sphinx<5.0
  myst_parser
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinx_rtd_theme
  sphinxcontrib-mermaid
  sphinx_design

[flake8]
max-line-length=100

[options.entry_points]
console_scripts =
    # Main TARDIS entry
    tardis = tardis_em.tardis:main
    tardis_ota = tardis_em.utils.ota_update:main

    # Training TARDIS entry
    tardis_cnn_train = tardis_em.train_cnn:main
    tardis_dist_train = tardis_em.train_DIST:main

    # Prediction Filaments TARDIS entry
    tardis_mt = tardis_em.predict_mt:main
    tardis_filament = tardis_em.predict_filament:main
    tardis_compare_sg = tardis_em.compare_spatial_graphs:main

    # Prediction Membrane TARDIS entry
    tardis_mem = tardis_em.predict_mem:main
    tardis_mem2d = tardis_em.predict_mem_2d:main

    # Predict Instances TARDIS entry
    tardis_instance = tardis_em.predict_instances:main

    # Development TARDIS entry
    tardis_benchmark = tardis_em.benchmarks.benchmarks:main
