#######################################################################
#  TARDIS - Transformer And Rapid Dimensionless Instance Segmentation #
#                                                                     #
#  New York Structural Biology Center                                 #
#  Simons Machine Learning Center                                     #
#                                                                     #
#  Robert Kiewisz, Tristan Bepler                                     #
#  MIT License 2021 - 2024                                            #
#######################################################################
[metadata]
name = tardis_em
description = PyTorch segmentation of 2D/3D images such as electron tomography (ET),Cryo-EM or fluorescent microscopy data into 3D segmented point cloud.
long_description = file: README.md, doc/source/HISTORY.md, LICENSE
long_description_content_type = text/markdown
keywords = semantic segmentation, instance segmentation, MT segmentation, membrane segmentation, CNN, FNet, DIST
url = https://github.com/SMLC-NYSBC/TARDIS
author = Robert Kiewisz, Tristan Bepler
author_email = rkiewisz@nysbc.org
license = MIT
license_files = LICENSE
version = attr:tardis_em.__version__
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: 11
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10,!=3.12
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
open3d =
    open3d
pyvista =
    pyvista
nd2 =
    nd2
    roi
all =
    open3d
    pyvista
    nd2
    roi

[flake8]
max-line-length=100

[options.entry_points]
console_scripts =
    # Main TARDIS-em entry
    tardis = tardis_em.tardis:main

    # TARDIS helper scripts
    tardis_vis = tardis_em.scripts.tardis_visualize:main

    # Training TARDIS-em entry
    tardis_cnn_train = tardis_em.scripts.train_cnn:main
    tardis_dist_train = tardis_em.scripts.train_DIST:main

    # Prediction Filaments/MTs TARDIS-em entry
    tardis_predict = tardis_em.scripts.predict:main

    # Prediction Filaments/MTs TARDIS-em entry
    tardis_mt = tardis_em.scripts.predict_mt:main
    tardis_mt_tirf = tardis_em.scripts.predict_mt_tirf:main
    tardis_actin = tardis_em.scripts.predict_actin:main

    # Prediction Membrane TARDIS-em entry
    tardis_mem = tardis_em.scripts.predict_mem:main
    tardis_mem2d = tardis_em.scripts.predict_mem_2d:main

    # Development TARDIS-em entry
    tardis_benchmark = tardis_em.scripts.benchmarks.benchmarks:main

    # Analysis
    tardis_class = tardis_em.scripts.tardis_analysis_mt_class:main
